REBRAND: Updated to Handsome Gato Incorporated
 COMPLETE BRANDING UPDATE:
- Updated all page titles to 'Handsome Gato Incorporated'
- Changed navigation logo to 'Handsome Gato Inc.'
- Updated main headers and company references
- Modified meta descriptions and SEO tags
- Updated README, Executive Summary, and Project Plan
- Changed _config.yml for Jekyll/GitHub Pages

 CONSISTENCY ACROSS ALL PAGES:
- Home page: Full company name in header
- About: Company mission and story updated
- Services: Professional service offerings
- Portfolio: Client work and testimonials
- Contact: Business contact information
- Pricing: Professional pricing packages

 DOCUMENTATION UPDATED:
- README.md: Company name and description
- EXECUTIVE_SUMMARY.md: Executive overview
- HANDSOME_GATO_FOUNDATION_PROJECT_PLAN.md: Project roadmap
- PUBLISHED.md: Publishing confirmation
- PUBLISHING_GUIDE.md: Deployment instructions
- _config.yml: Jekyll configuration

Now fully branded as Handsome Gato Incorporated!

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Handsome Gato Foundation"
+title: "Handsome Gato Incorporated"
 description: "WordPress Development & Digital Marketing Excellence"
 url: "https://handsomegato.github.io"
 baseurl: "/wordpress"
@@ -32,10 +32,10 @@ plugins:
   - jekyll-seo-tag
 
 # SEO
-author: "Handsome Gato"
+author: "Handsome Gato Incorporated"
 twitter:
   username: handsomegato
 social:
-  name: Handsome Gato
+  name: Handsome Gato Incorporated
   links:
     - https://github.com/handsomegato
